test/e2e/features/services/tcproute/testdata/cross-ns-client-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cross-namespace-allowed-client-ns
