test/e2e/features/services/tcproute/testdata/cross-ns-no-refgrant-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  selector:
    app: backend-svc
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-svc
  labels:
    app: backend-svc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-svc
  template:
    metadata:
      labels:
        app: backend-svc
    spec:
      containers:
        - image: registry.k8s.io/gateway-api/echo-basic:v1.5.0@sha256:fcbdfab85b3c4441e2fe8fdedd382904332ccb8253a5d51f6006c16903e7ae40
          imagePullPolicy: IfNotPresent
          name: echo
          ports:
            - containerPort: 3000
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: backend-svc
