test/e2e/features/services/tcproute/testdata/cross-ns-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: tcp-route
spec:
  parentRefs:
    - name: gateway
  rules:
    - backendRefs:
        - name: backend-svc
          namespace: cross-namespace-allowed-backend-ns
          port: 3001
