test/e2e/features/services/tcproute/testdata/multi-listener-gateway-and-client.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: multi-tcp-gateway
spec:
  gatewayClassName: kgateway
  listeners:
  - name: listener-8088
    protocol: TCP
    port: 8088
    allowedRoutes:
      kinds:
      - kind: TCPRoute
  - name: listener-8089
    protocol: TCP
    port: 8089
    allowedRoutes:
      kinds:
      - kind: TCPRoute
---
# Immutable pod spec fields should be consistent with test/e2e/defaults/testdata/curl_pod.yaml
# due to https://github.com/kgateway-dev/kgateway/issues/13408.
apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    app: curl
    version: v1
spec:
  terminationGracePeriodSeconds: 0
  containers:
    - name: curl
      image: ghcr.io/kgateway-dev/curl:8.20.0
      imagePullPolicy: IfNotPresent
      command:
        - "tail"
        - "-f"
        - "/dev/null"
      resources:
        requests:
          cpu: "100m"
          memory: "64Mi"
        limits:
          cpu: "200m"
          memory: "128Mi"
