test/e2e/features/services/tcproute/testdata/multi-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: tcp-route-1
spec:
  parentRefs:
  - name: multi-tcp-gateway
    sectionName: listener-8088
  rules:
  - backendRefs:
    - name: multi-svc-1
      port: 3001
      weight: 60
---
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: tcp-route-2
spec:
  parentRefs:
  - name: multi-tcp-gateway
    sectionName: listener-8089
  rules:
  - backendRefs:
    - name: multi-svc-2
      port: 3002
      weight: 40
