test/e2e/features/services/tcproute/testdata/single-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: single-tcp-route
spec:
  parentRefs:
  - name: single-tcp-gateway
    sectionName: listener-8087
  rules:
  - backendRefs:
    - name: single-svc
      port: 3001
