test/e2e/features/services/tcproute/testdata/tls-tcp-gateway-and-client.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-listener-tcp-gateway
spec:
  gatewayClassName: kgateway
  listeners:
    - name: listener-8443
      protocol: TLS
      port: 8443
      hostname: example.com
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: tls-secret
      allowedRoutes:
        kinds:
          - kind: TCPRoute
---
# Immutable pod spec fields should be consistent with test/e2e/defaults/testdata/curl_pod.yaml
# due to https://github.com/kgateway-dev/kgateway/issues/13408.
apiVersion: v1
kind: Pod
metadata:
  name: curl
  labels:
    app: curl
    version: v1
spec:
  terminationGracePeriodSeconds: 0
  containers:
    - name: curl
      image: ghcr.io/kgateway-dev/curl:8.20.0
      imagePullPolicy: IfNotPresent
      command:
        - "tail"
        - "-f"
        - "/dev/null"
      resources:
        requests:
          cpu: "100m"
          memory: "64Mi"
        limits:
          cpu: "200m"
          memory: "128Mi"
      volumeMounts:
        - name: server-certs
          mountPath: /etc/server-certs
          readOnly: true
  volumes:
    - name: server-certs
      secret:
        secretName: tls-secret
