test/e2e/features/services/tcproute/testdata/tls-tcp-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: tls-listener-tcproute
spec:
  parentRefs:
    - name: tls-listener-tcp-gateway
      sectionName: listener-8443
  rules:
    - backendRefs:
        - name: tls-listener-svc
          port: 3001
